force-app/main/default/objects/Region__c/fields/Border_Color__c.field-meta.xml
<CustomField>
    <fullName>Border_Color__c</fullName>
    <label>Border Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>