force-app/main/default/objects/Region__c/fields/Center_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Center_Latitude__c</fullName>
    <description>Map center point latitude</description>
    <label>Center Latitude</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>