force-app/main/default/objects/Region__c/fields/Center_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Center_Longitude__c</fullName>
    <description>Map center point longitude</description>
    <label>Center Longitude</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>