force-app/main/default/objects/Region__c/fields/Fill_Color__c.field-meta.xml
<CustomField>
    <fullName>Fill_Color__c</fullName>
    <label>Fill Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>