force-app/main/default/objects/Region__c/fields/Fill_Opacity__c.field-meta.xml
<CustomField>
    <fullName>Fill_Opacity__c</fullName>
    <label>Fill Opacity</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>