force-app/main/default/objects/Region__c/fields/FIPS_Code__c.field-meta.xml
<CustomField>
    <fullName>FIPS_Code__c</fullName>
    <description>County FIPS code</description>
    <label>FIPS Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>