force-app/main/default/objects/Region__c/fields/GeoJSON_Boundary__c.field-meta.xml
<CustomField>
    <fullName>GeoJSON_Boundary__c</fullName>
    <description>Polygon boundary data</description>
    <label>GeoJSON Boundary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>