force-app/main/default/objects/Region__c/fields/Region_Label__c.field-meta.xml
<CustomField>
    <fullName>Region_Label__c</fullName>
    <description>Display name (e.g., &quot;Northern California&quot;)</description>
    <label>Region Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>