force-app/main/default/objects/Region__c/fields/Region_Type__c.field-meta.xml
<CustomField>
    <fullName>Region_Type__c</fullName>
    <label>Region Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>County</fullName>
            </value>
            <value>
                <fullName>City</fullName>
            </value>
            <value>
                <fullName>Metropolitan Area</fullName>
            </value>
            <value>
                <fullName>Custom Region</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>