force-app/main/default/objects/Region__c/fields/Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>Territory_ID__c</fullName>
    <label>Territory ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>